[package]
name = "rlu"
version = "0.1.0"
edition = "2018"
authors = ["Teo Oliver <teo.liz.oli@gmail.com>"]
license = "MIT"
description = "A CLI tool for running multiple lighthouse tests on a website and generating an avarage score perfomance metrics."
readme = "README.md"
homepage = "https://github.com/teooliver/rust-lighthouse-utils"
repository = "https://github.com/teooliver/rust-lighthouse-utils"
keywords = ["cli", "lighthouse", "test"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
rustils = "0.1.23"
structopt = "0.3.13"
indicatif = "0.16.2"